SP menu improved

--- a/common/sass/portfolio.sass
+++ b/common/sass/portfolio.sass
@@ -334,7 +334,8 @@ h2
 
 @include mq(min, 1490)
   body
-    font-size: 18px
+    main
+      font-size: 18px
   header
     left: calc((100vw - 1440px) / 2 )
 
