--- a/common/css/freelance.css
+++ b/common/css/freelance.css
@@ -81,15 +81,19 @@ main {
 }
 
 #top .img-box::after {
-  content: "";
-  background: url(/work03/images/grad1_sp.svg) no-repeat bottom left/contain;
+  content: url(/work03/images/grad1_sp.svg);
   width: calc(100% + 30px);
-  height: 300px;
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: -15px;
   z-index: 2;
+}
+
+@media screen and (min-width: 768px) {
+  #top .img-box::after {
+    bottom: -50px;
+  }
 }
 
 h2 {
@@ -150,38 +154,40 @@ h2::before {
 }
 
 #points .img-box {
-  padding-top: 10px;
   position: relative;
-  width: 100%;
-  height: 310px;
+  width: 60vw;
+  height: 300px;
   margin: auto;
 }
 
 #points .img-box img {
   margin-top: 20px;
   position: absolute;
-  width: 300px;
+  width: 80vw;
 }
 
 #points .img-box img:nth-child(1) {
-  -webkit-transform: translateX(-36px);
-          transform: translateX(-36px);
+  top: 0;
+  left: 0;
 }
 
 #points .img-box img:nth-child(2) {
-  -webkit-transform: translate(52px, 60px);
-          transform: translate(52px, 60px);
+  top: 52px;
+  right: 0;
 }
 
 #points .img-box img:nth-child(3) {
-  -webkit-transform: translate(-36px, 120px);
-          transform: translate(-36px, 120px);
+  bottom: 0;
+  left: 0;
 }
 
 #points .img-box .img-title {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 0.1em;
+  position: absolute;
+  top: -10px;
+  left: -10vw;
 }
 
 #live {
@@ -259,9 +265,9 @@ footer {
   }
   #top .flex {
     -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -459,21 +465,9 @@ footer {
     margin-top: 0;
     right: 0;
   }
-  #top {
-    background: url(/work02/images/bg_white.svg) center/45px auto, url(/work02/images/bg_works.png) no-repeat top center/cover;
-  }
-  #thanks {
-    background: url(/work02/images/bg_white.svg) center/45px auto #271B12;
-  }
-  #wfs {
-    background: url(/work02/images/bg_white.svg) center/45px auto, url(/work02/images/bg_wf.png) no-repeat center/cover #3E002C;
-  }
 }
 
 @media screen and (min-width: 1260px) {
-  #top {
-    background: url(/work02/images/bg_white.svg) center/45px auto, url(/work02/images/bg_works.png) no-repeat top center/auto;
-  }
   #wfs .pos-left, #wfs .pos-right {
     top: calc(100% / 1.6 + 60px);
   }
