--- a/common/css/style.css
+++ b/common/css/style.css
@@ -107,7 +107,57 @@ header .nav-menu {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 450px;
+}
+
+@media screen and (min-width: 1260px) {
+  header .nav-menu li {
+    position: relative;
+  }
+  header .nav-menu li:hover .sub-menu li, header .nav-menu li:hover .sub-menu:hover li {
+    display: block;
+  }
+  header .nav-menu li:hover .sub-menu li:nth-child(1), header .nav-menu li:hover .sub-menu:hover li:nth-child(1) {
+    -webkit-animation: subMenuSlideIn 0.3s ease-in forwards 0ms;
+            animation: subMenuSlideIn 0.3s ease-in forwards 0ms;
+  }
+  header .nav-menu li:hover .sub-menu li:nth-child(2), header .nav-menu li:hover .sub-menu:hover li:nth-child(2) {
+    -webkit-animation: subMenuSlideIn 0.3s ease-in forwards 150ms;
+            animation: subMenuSlideIn 0.3s ease-in forwards 150ms;
+  }
+  header .nav-menu li:hover .sub-menu li:nth-child(3), header .nav-menu li:hover .sub-menu:hover li:nth-child(3) {
+    -webkit-animation: subMenuSlideIn 0.3s ease-in forwards 300ms;
+            animation: subMenuSlideIn 0.3s ease-in forwards 300ms;
+  }
+  header .nav-menu li:hover .sub-menu li:nth-child(4), header .nav-menu li:hover .sub-menu:hover li:nth-child(4) {
+    -webkit-animation: subMenuSlideIn 0.3s ease-in forwards 450ms;
+            animation: subMenuSlideIn 0.3s ease-in forwards 450ms;
+  }
+}
+
+header .nav-menu > li + li {
+  margin-left: 60px;
+}
+
+header .nav-menu .sub-menu {
+  font-size: 80%;
+}
+
+@media screen and (min-width: 1260px) {
+  header .nav-menu .sub-menu {
+    position: absolute;
+    -webkit-transition: -webkit-transform .8s ease-in;
+    transition: -webkit-transform .8s ease-in;
+    transition: transform .8s ease-in;
+    transition: transform .8s ease-in, -webkit-transform .8s ease-in;
+    top: 16px;
+    left: 0;
+    width: 200px;
+  }
+  header .nav-menu .sub-menu li {
+    display: none;
+    opacity: 0;
+    margin-top: 10px;
+  }
 }
 
 header .nav-menu a {
@@ -128,6 +178,59 @@ header .nav-menu a:hover {
 
 body#page-404 header .nav-menu a:hover {
   color: #ffb900;
+}
+
+header .nav-menu .sub-menu a {
+  -webkit-transition: background-color .4s ease-out;
+  transition: background-color .4s ease-out;
+}
+
+header .nav-menu .sub-menu a::before {
+  content: "";
+  background-color: #FEF9F3;
+  width: 5px;
+  height: 5px;
+  margin-right: 7px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+body#page-404 header .nav-menu .sub-menu a::before {
+  background-color: #271B12;
+}
+
+header .nav-menu .sub-menu a:hover::before {
+  background-color: #ffc733;
+}
+
+body#page-404 header .nav-menu .sub-menu a:hover::before {
+  background-color: #ffb900;
+}
+
+@-webkit-keyframes subMenuSlideIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes subMenuSlideIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 
 .wrapper {
@@ -1062,10 +1165,13 @@ body#page-404 .btn-main a:hover {
     right: 0;
   }
   main .main-title, main .over-title, main .back-title {
-    font-size: 350%;
+    font-size: 300%;
+  }
+  main .intro {
+    font-size: 110%;
   }
   main .content-title {
-    font-size: 210%;
+    font-size: 200%;
     margin-bottom: 60px;
   }
   main .main-hero_img {
@@ -1183,7 +1289,7 @@ body#page-404 .btn-main a:hover {
     position: absolute;
   }
   main #experience {
-    background: url(/images/bg_white_check.svg) center/20px auto, #271B12;
+    background: url(/images/bg_white_check.svg) center/15px auto, #271B12;
     padding-bottom: 30px;
   }
   main #experience .content-title {
@@ -1234,7 +1340,7 @@ body#page-404 .btn-main a:hover {
   }
   main #experience .exp-grid .edu h3, main #experience .exp-grid .work h3 {
     position: relative;
-    font-size: 190%;
+    font-size: 150%;
   }
   main #experience .exp-grid .edu h3::before, main #experience .exp-grid .work h3::before {
     position: absolute;
@@ -1249,7 +1355,7 @@ body#page-404 .btn-main a:hover {
     border-left: none;
   }
   main #experience .exp-grid .edu {
-    background: url(/images/bg_white_check.svg) center/20px auto, #3E002C;
+    background: url(/images/bg_white_check.svg) center/15px auto, #3E002C;
   }
   main #experience .exp-grid .edu::after {
     background: repeating-linear-gradient(to right, #ffb900 1px, #ffb900 3px, transparent 3px, transparent 5px);
@@ -1259,7 +1365,7 @@ body#page-404 .btn-main a:hover {
     color: #ffb900;
   }
   main #experience .exp-grid .work {
-    background: url(/images/bg_white_check.svg) center/20px auto, #271B12;
+    background: url(/images/bg_white_check.svg) center/15px auto, #271B12;
   }
   main #experience .exp-grid .work::after {
     background: repeating-linear-gradient(to right, #f40175 1px, #f40175 3px, transparent 3px, transparent 5px);
@@ -1350,22 +1456,31 @@ body#page-404 .btn-main a:hover {
   main #about::after {
     background-size: 20.42px 13.75px;
   }
+}
+
+@media screen and (max-width: 350px) {
+  body {
+    font-size: 75%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
   header {
     z-index: 25;
   }
   header nav {
-    -webkit-transform: translateX(160px);
-            transform: translateX(160px);
+    position: fixed;
+    z-index: 25;
+    -webkit-transform: translateX(220px);
+            transform: translateX(220px);
+    width: 220px;
     -webkit-transition: all .4s ease-out;
     transition: all .4s ease-out;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    position: fixed;
-    width: 160px;
     height: 100vh;
     background: #fff;
-    z-index: 25;
     top: 0;
     right: 0;
     bottom: 0;
@@ -1373,7 +1488,7 @@ body#page-404 .btn-main a:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 15px;
+    padding: 15px 15px 15px 30px;
     -webkit-box-shadow: -30px 0 60px -40px rgba(0, 0, 0, 0.25);
             box-shadow: -30px 0 60px -40px rgba(0, 0, 0, 0.25);
   }
@@ -1382,10 +1497,19 @@ body#page-404 .btn-main a:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    min-height: 240px;
-    text-align: right;
     width: auto;
     font-size: 120%;
+  }
+  header nav .nav-menu > li + li {
+    margin-left: 0;
+    margin-top: 30px;
+  }
+  header nav .nav-menu .sub-menu {
+    display: block;
+    text-align: right;
+  }
+  header nav .nav-menu .sub-menu li {
+    margin-top: 15px;
   }
   header nav .nav-menu a {
     color: #333;
@@ -1417,19 +1541,10 @@ body#page-404 .btn-main a:hover {
   }
 }
 
-@media screen and (max-width: 350px) {
-  body {
-    font-size: 75%;
-  }
-}
-
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1024px) {
   .x-btn {
     display: none;
   }
-}
-
-@media screen and (min-width: 1024px) {
   .wrapper {
     width: calc(100% - 130px);
   }
