--- a/common/sass/_sp.sass
+++ b/common/sass/_sp.sass
@@ -35,9 +35,11 @@
 
   main
     .main-title, .over-title, .back-title
-      font-size: 350%
+      font-size: 300%
+    .intro
+      font-size: 110%
     .content-title
-      font-size: 210%
+      font-size: 200%
       margin-bottom: $titleBot
     .main-hero_img
       left: 0
@@ -118,7 +120,7 @@
         content: ""
         position: absolute
     #experience
-      background: url(/images/bg_white_check.svg) center / 20px auto, $black
+      background: url(/images/bg_white_check.svg) center / 15px auto, $black
       padding-bottom: 30px
       .content-title
         padding-top: $titleTop
@@ -155,7 +157,7 @@
             height: 1px
           h3
             position: relative
-            font-size: 190%
+            font-size: 150%
             &::before
               position: absolute
               top: -58px
@@ -168,7 +170,7 @@
           border-left: none
           // border-top: 1px dashed
         .edu
-          background:  url(/images/bg_white_check.svg) center / 20px auto, $bgMainC
+          background:  url(/images/bg_white_check.svg) center / 15px auto, $bgMainC
           // border-color: $accSecC
           &::after
             background: repeating-linear-gradient(to right, $accSecC 1px, $accSecC 3px, transparent 3px, transparent 5px)
@@ -177,7 +179,7 @@
               content: "EDUCATION"
               color: $accSecC
         .work
-          background: url(/images/bg_white_check.svg) center / 20px auto, $black
+          background: url(/images/bg_white_check.svg) center / 15px auto, $black
           // border-color: lighten($accMainC, 10%)
           &::after
             background: repeating-linear-gradient(to right, lighten($accMainC, 10%) 1px, lighten($accMainC, 10%) 3px, transparent 3px, transparent 5px)
@@ -253,30 +255,46 @@
   main #about::after
     background-size: 20.42px 13.75px
 
+
+
+@include mq(max, 350)
+  body
+    font-size: 75%
+
+// the point and more
+
+@include mq(max, 1023)
   //Nav menu
   header
     z-index: 25
     nav
-      transform: translateX(160px)
+      position: fixed
+      z-index: 25
+      transform: translateX(220px)
+      width: 220px
       transition: all .4s ease-out
       display: flex
-      position: fixed
-      width: 160px
       height: 100vh
       background: #fff
-      z-index: 25
       top: 0
       right: 0
       bottom: 0
       flex-direction: column
-      padding: 15px
+      padding: 15px 15px 15px 30px
       box-shadow: -30px 0 60px -40px rgba(0,0,0,.25)
       .nav-menu
         flex-direction: column
-        min-height: 240px
-        text-align: right
+        // text-align: right
         width: auto
         font-size: 120%
+        > li + li
+          margin-left: 0
+          margin-top: 30px
+        .sub-menu
+          display: block
+          text-align: right
+          li
+            margin-top: 15px
         a
           color: #333
       &.opened
@@ -302,18 +320,9 @@
     margin-bottom: 30px
 
 
-
-@include mq(max, 350)
-  body
-    font-size: 75%
-
-// the point and more
-
-@include mq(min, 769)
+@include mq(min, 1024)
   .x-btn
     display: none
-
-@include mq(min, 1024)
   .wrapper
     width: calc(100% - 130px)
 
