--- a/common/sass/freelance.sass
+++ b/common/sass/freelance.sass
@@ -62,13 +62,15 @@ main
       position: relative
       z-index: 9
     &::after
-      content: ""
-      background: url(/work03/images/grad1_sp.svg) no-repeat bottom left /contain
+      content: url(/work03/images/grad1_sp.svg)
       width: calc(100% + 30px)
-      height: 300px
+      // height: 300px
       display: block
       position: absolute
-      bottom: 0
+      bottom: -10px
+      @include mq(min, 768)
+        bottom: -50px
+      // bottom: calc(120vw - 490px)
       left: -15px
       z-index: 2
   .text-box
@@ -111,36 +113,42 @@ h2
         font-weight: 500
         left: -26px
   .img-box
-    padding-top: 10px
+    // padding-top: 30px
     // display: flex
     // flex-direction: column
     // justify-content: space-between
     position: relative
-    width: 100%
-    height: 310px
+    // width: 100vw
+    width: 60vw
+    height: 300px
     margin: auto
     // max-height: 300px
     img
       margin-top: 20px
       position: absolute
-      width: 300px
+      // width: 300px
+      width: 80vw
       &:nth-child(1)
         // align-self: flex-start
-        transform: translateX(-36px)
-        // top: 0
-        // left: 0
+        // transform: translateX(-36px)
+        top: 0
+        left: 0
       &:nth-child(2)
-        transform: translate(52px, 60px)
-        // top: 30%
-        // right: 0
+        // transform: translate(52px, 60px)
+        top: 52px
+        right: 0
       &:nth-child(3)
-        transform: translate(-36px, 120px)
+        // transform: translate(-36px, 120px)
         // top: 60%
-        // left: 0      
+        bottom: 0
+        left: 0      
     .img-title
       text-transform: uppercase
       font-weight: bold
       letter-spacing: 0.1em
+      position: absolute
+      top: -10px
+      left: -10vw
       // box-shadow: 0px 50px 100px -20px rgba(50, 50, 93, 0.25), 0px 30px 60px -20px rgba(0, 0, 0, 0.3)
 
 #live
@@ -190,7 +198,7 @@ footer
       > *:first-child
         width: 44%
     .flex
-      flex-direction: row-reverse
+      flex-direction: row
       justify-content: space-between
     .text-box
       width: 48%
@@ -309,17 +317,7 @@ footer
       right: 0
 
 
-
-  #top
-    background: url(/work02/images/bg_white.svg) center / 45px auto, url(/work02/images/bg_works.png) no-repeat top center / cover
-  #thanks
-    background: url(/work02/images/bg_white.svg) center / 45px auto $black 
-  #wfs
-    background: url(/work02/images/bg_white.svg) center / 45px auto, url(/work02/images/bg_wf.png) no-repeat center / cover $bgMainC
-
 @include mq(min, 1260)
-  #top
-      background: url(/work02/images/bg_white.svg) center / 45px auto, url(/work02/images/bg_works.png) no-repeat top center / auto
   #wfs
     .pos-left, .pos-right
       top: calc(100% / 1.6 + 60px)
