--- a/common/sass/works.sass
+++ b/common/sass/works.sass
@@ -38,6 +38,8 @@ h2
     text-align: center
     max-width: 300px
     margin: auto
+    @include mq(max, 349)
+      max-width: 200px
 
 @include mq(min, 1600)
   .wrapper
