--- a/common/css/freelance.css
+++ b/common/css/freelance.css
@@ -24,9 +24,16 @@ main {
   margin: 54px 30px 30px;
 }
 
+@media screen and (min-width: 430px) {
+  main {
+    padding: 0 20px;
+  }
+}
+
 #top {
   padding-top: 15px;
   padding-bottom: 30px;
+  position: relative;
 }
 
 #top h1 {
@@ -64,35 +71,30 @@ main {
 
 #top .img-box {
   padding-bottom: 30px;
+}
+
+#top .img-box img {
+  z-index: 3;
   position: relative;
 }
 
-#top .img-box > *:first-child {
-  position: absolute;
-  bottom: 22px;
-  right: 30px;
-  z-index: 10;
-  width: 18%;
-}
-
-#top .img-box > *:last-child {
-  position: relative;
-  z-index: 9;
-}
-
-#top .img-box::after {
-  content: url(/work03/images/grad1_sp.svg);
-  width: calc(100% + 30px);
+#top::after {
+  content: "";
+  background: url(/work03/images/grad1_sp.svg) no-repeat center bottom -10%/115% auto;
+  width: 100%;
+  height: 300px;
   display: block;
   position: absolute;
-  bottom: -10px;
-  left: -15px;
+  top: calc(100vw - 290px);
+  left: 0;
   z-index: 2;
 }
 
-@media screen and (min-width: 768px) {
-  #top .img-box::after {
-    bottom: -50px;
+@media screen and (min-width: 500px) {
+  #top::after {
+    background: url(/work03/images/grad1_sp.svg) no-repeat center bottom -10%/100% auto;
+    height: 490px;
+    top: 20vw;
   }
 }
 
@@ -122,6 +124,19 @@ h2::before {
   line-height: 1.75;
 }
 
+@media screen and (min-width: 430px) {
+  #points {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+}
+
+@media screen and (max-width: 1599px) {
+  #points .wrapper {
+    width: 100%;
+  }
+}
+
 #points h2 {
   color: #80d1ea;
 }
@@ -133,6 +148,10 @@ h2::before {
 #points .flex {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #points ul.mark {
@@ -155,39 +174,41 @@ h2::before {
 
 #points .img-box {
   position: relative;
-  width: 60vw;
-  height: 300px;
-  margin: auto;
+  height: 80vw;
+  width: 100%;
 }
 
 #points .img-box img {
   margin-top: 20px;
   position: absolute;
-  width: 80vw;
+  width: calc(100vw - 30px - 30px);
 }
 
 #points .img-box img:nth-child(1) {
   top: 0;
-  left: 0;
+  left: -30px;
+  z-index: 20;
 }
 
 #points .img-box img:nth-child(2) {
-  top: 52px;
-  right: 0;
+  top: 20%;
+  right: -30px;
+  z-index: 21;
 }
 
 #points .img-box img:nth-child(3) {
   bottom: 0;
-  left: 0;
+  left: -30px;
+  z-index: 22;
 }
 
-#points .img-box .img-title {
+#points .img-title {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 0.1em;
-  position: absolute;
-  top: -10px;
-  left: -10vw;
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
 }
 
 #live {
@@ -235,6 +256,26 @@ h2::before {
   color: #80d1ea;
 }
 
+@media screen and (min-width: 430px) {
+  #live, #thanks {
+    width: calc(100% + 40px);
+    -webkit-transform: translateX(-20px);
+            transform: translateX(-20px);
+  }
+}
+
+@media screen and (min-width: 430px) and (max-width: 1023px) {
+  #live .wrapper {
+    width: calc(100% - 70px);
+  }
+}
+
+@media screen and (min-width: 1023px) and (max-width: 430px) {
+  #live .wrapper {
+    width: calc(100% - 70px);
+  }
+}
+
 footer {
   background: #0A0046;
 }
@@ -254,14 +295,37 @@ footer {
 }
 
 @media screen and (min-width: 1024px) {
+  main {
+    margin-top: 70px;
+    margin-bottom: 0;
+  }
   #top {
-    padding-top: 110px;
+    padding-top: 60px;
+    padding-bottom: 50px;
+    position: relative;
+  }
+  #top::after {
+    content: "";
+    background: url(/work03/images/grad1.svg) no-repeat bottom right/100% auto;
+    width: 822px;
+    display: block;
+    position: absolute;
+    z-index: 2;
+    top: auto;
+    bottom: 0;
+    right: -20px;
+    left: auto;
+    height: 100%;
+  }
+  #top h1 {
+    font-size: 3.5vw;
+    margin-bottom: 40px;
   }
   #top .img-box {
     width: 48%;
   }
-  #top .img-box > *:first-child {
-    width: 44%;
+  #top .img-box::after {
+    content: "";
   }
   #top .flex {
     -webkit-box-orient: horizontal;
@@ -271,224 +335,69 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #top .text-box {
     width: 48%;
-  }
-  #board h2 {
-    margin-bottom: 20px;
-    width: 60%;
-  }
-  #board .board-box {
     position: relative;
+    z-index: 3;
   }
-  #board .board-box .text-box {
-    position: absolute;
-    width: 40%;
-    right: 5%;
-    top: 19%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  #board .grid-8ver2 {
-    overflow: hidden;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1260px) {
-  #board .grid-8ver2 {
-    height: calc(1196px/1.3);
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 {
-    height: calc(1518px/1.3);
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2, #board .grid-8ver2 .pos-left, #board .grid-8ver2 .pos-right {
-    gap: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2, #board .grid-8ver2 .pos-left, #board .grid-8ver2 .pos-right {
-    gap: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-left, #board .grid-8ver2 .pos-right {
-    display: block;
-  }
-  #board .grid-8ver2 .pos-left > .item:nth-child(2) {
-    width: calc(48.75% - 7.5px);
-    float: left;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-left > .item:nth-child(2) {
-    width: calc(48.75% - 12.5px);
-    margin-top: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-left > .item:nth-child(3) {
-    width: calc(51.25% - 7.5px);
-    float: right;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-left > .item:nth-child(3) {
-    width: calc(51.25% - 12.5px);
-    margin-top: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-left > .item:nth-child(4) {
-    width: calc(48.75% - 7.5px);
-    float: left;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-left > .item:nth-child(4) {
-    width: calc(48.75% - 12.5px);
-    margin-top: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(1) {
-    margin-top: 63%;
-    width: calc(59% - 7.5px);
-    float: left;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(1) {
-    width: calc(59% - 12.5px);
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(2) {
-    margin-top: 63%;
-    width: calc(41% - 7.5px);
-    float: right;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(2) {
-    width: calc(41% - 12.5px);
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(3) {
-    width: calc(59% - 7.5px);
-    float: left;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(3) {
-    width: calc(59% - 12.5px);
-    margin-top: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(4) {
-    width: calc(41% - 7.5px);
-    float: right;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (min-width: 1024px) and (min-width: 1518px) {
-  #board .grid-8ver2 .pos-right > .item:nth-child(4) {
-    width: calc(41% - 12.5px);
-    margin-top: 25px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  #wfs .wrapper {
-    position: relative;
-  }
-  #wfs .img-box {
-    position: relative;
-    width: 100%;
-  }
-  #wfs .img-box img {
-    position: absolute;
-    width: 45%;
-  }
-  #wfs .img-box img:nth-child(1) {
-    top: 0;
-    left: 0;
-  }
-  #wfs .img-box img:nth-child(2) {
-    top: 0;
-    right: 0;
-  }
-  #wfs .img-box img:nth-child(3) {
-    bottom: 0;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-  #wfs .pos-left, #wfs .pos-right {
-    position: absolute;
-    top: calc(100% / 1.6 + 30px);
-    width: 25%;
-  }
-  #wfs .pos-left {
-    left: 0;
-  }
-  #wfs .pos-right {
-    margin-top: 0;
-    right: 0;
-  }
-}
-
-@media screen and (min-width: 1260px) {
-  #wfs .pos-left, #wfs .pos-right {
-    top: calc(100% / 1.6 + 60px);
-  }
-  #misc .flex {
+  #points .wrapper > .flex {
     -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  #misc .flex > * {
-    width: 48%;
+  #points .wrapper > .flex .pos-right {
+    width: 40%;
   }
-  #misc .flex > *:last-child {
-    margin-top: 120px;
+  #points .wrapper > .flex .pos-left {
+    width: 56%;
   }
-  #misc .colors {
-    width: 80%;
-    margin-left: -20px;
+  #points .img-box {
+    height: 520px;
+  }
+  #points .img-box img {
+    width: calc(40vw - 30px - 30px);
+  }
+  #points .img-title {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    text-align: center;
+    margin-top: -20px;
+  }
+  #live {
+    background: url(/work03/images/grad2.svg) no-repeat bottom right/cover;
+  }
+  h2::before {
+    width: 3vw;
+    height: 3vw;
+  }
+  #thanks {
+    width: 100vw;
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  body::after {
+    background: url(/work03/images/bg.jpg) no-repeat top center/cover;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    width: calc(100% - 90px);
   }
 }
 
@@ -499,50 +408,74 @@ footer {
   header {
     left: calc((100vw - 1440px) / 2);
   }
+  header .nav-menu .sub-menu li {
+    background: -webkit-gradient(linear, left top, right top, from(#24009f), to(#6601b7));
+    background: linear-gradient(to right, #24009f, #6601b7);
+    padding: 5px;
+  }
+  header .nav-menu .sub-menu li + li {
+    margin-top: 5px;
+  }
   #top {
-    padding-top: 150px;
-    padding-bottom: 100px;
+    padding-top: 60px;
+    padding-bottom: 80px;
   }
   #top h1 {
-    width: 70%;
-    margin-bottom: 80px;
+    font-size: 250%;
   }
-  #top h2 {
-    margin-top: 30px;
+  #top .img-box {
+    width: 54%;
+    margin-right: -40px;
   }
-  #top p {
-    font-size: 110%;
+  #top .text-box {
+    width: 46%;
   }
   #top p + p {
     margin-top: 16px;
   }
-  #top .flex > * {
-    width: 46%;
-  }
   h2 {
-    font-size: 375%;
+    font-size: 250%;
   }
-  #board {
-    padding-top: 100px;
-    padding-bottom: 100px;
+  h2::before {
+    width: 32px;
+    height: 32px;
   }
-  #board h2 {
-    margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1600px) {
+  main {
+    margin: 9vw 8vw 0;
   }
-  #wfs {
-    padding-top: 80px;
-    padding-bottom: 100px;
+  #points, #thanks {
+    -webkit-transform: translateX(calc(-8vw - 20px));
+            transform: translateX(calc(-8vw - 20px));
   }
-  #wfs h2 {
-    margin-bottom: 50px;
+  #points .wrapper .flex .pos-left {
+    width: 48%;
+  }
+  #points .img-box {
+    height: 480px;
+  }
+  #points .img-box img {
+    width: calc(30vw - 30px - 30px);
+  }
+  .wrapper, #points .wrapper {
+    width: 1300px;
+  }
+  #live {
+    padding-bottom: 3vw;
+  }
+  #live .btn {
+    margin-top: 30px;
+  }
+  #live h2 {
+    margin-top: 2vw;
+    margin-bottom: 2vw;
   }
 }
 
 @media screen and (min-width: 1980px) {
   header {
     left: calc((100vw - 1660px) / 2);
-  }
-  #board .grid-8 {
-    height: calc(1660px / 1.4);
   }
 }
